moon note base class create

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -168,4 +168,42 @@ spring:
           data-source-log-enabled: true
           result-set-log-enabled: true
           statement-log-enabled: true
-
+#mybatis-plus
+mybatis-plus:
+  #datasource: datasource
+  mapperLocations: classpath*:/mapper/**Mapper.xml
+  #\u5B9E\u4F53\u626B\u63CF\uFF0C\u591A\u4E2Apackage\u7528\u9017\u53F7\u6216\u8005\u5206\u53F7\u5206\u9694
+  typeAliasesPackage: com.eric.moonshineonme.cm.pojo.entity
+  #\u8BE5\u914D\u7F6E\u8BF7\u548C typeAliasesPackage \u4E00\u8D77\u4F7F\u7528\uFF0C\u5982\u679C\u914D\u7F6E\u4E86\u8BE5\u5C5E\u6027\uFF0C\u5219\u4EC5\u4EC5\u4F1A\u626B\u63CF\u8DEF\u5F84\u4E0B\u4EE5\u8BE5\u7C7B\u4F5C\u4E3A\u7236\u7C7B\u7684\u57DF\u5BF9\u8C61 \u3002
+  type-aliases-super-type: com.eric.moonshineonme.common.base.BaseEntity
+  #\u679A\u4E3E\u7C7B\u626B\u63CF\u8DEF\u5F84\uFF0C\u5982\u679C\u914D\u7F6E\u4E86\u8BE5\u5C5E\u6027\uFF0Cx'x\u4F1A\u5C06\u8DEF\u5F84\u4E0B\u7684\u679A\u4E3E\u7C7B\u8FDB\u884C\u6CE8\u5165\uFF0C\u8BA9\u5B9E\u4F53\u7C7B\u5B57\u6BB5\u80FD\u591F\u7B80\u5355\u5FEB\u6377\u7684\u4F7F\u7528\u679A\u4E3E\u5C5E\u6027\u3002
+#  typeEnumsPackage: com.zjrcinfo.pet.enums
+  #typeHandlersPackage:
+  #\u6307\u5B9A\u5916\u90E8\u5316 MyBatis Properties \u914D\u7F6E\uFF0C\u901A\u8FC7\u8BE5\u914D\u7F6E\u53EF\u4EE5\u62BD\u79BB\u914D\u7F6E\uFF0C\u5B9E\u73B0\u4E0D\u540C\u73AF\u5883\u7684\u914D\u7F6E\u90E8\u7F72\u3002
+  #configuration-properties: classpath:mybatis/config.properties
+  global-config:
+    db-config:
+      #\u4E3B\u952E\u7C7B\u578B
+      id-type: auto
+      #\u5B57\u6BB5\u7B56\u7565
+      field-strategy: not_null
+      #\u662F\u5426\u5F00\u542F\u5927\u5199\u547D\u540D\uFF0C\u9ED8\u8BA4\u4E0D\u5F00\u542F
+      capital-mode: false
+      #\u903B\u8F91\u5220\u9664\u914D\u7F6E
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      #\u8868\u540D\u3001\u662F\u5426\u4F7F\u7528\u4E0B\u5212\u7EBF\u547D\u540D\uFF0C\u9ED8\u8BA4\u6570\u636E\u5E93\u8868\u4F7F\u7528\u4E0B\u5212\u7EBF\u547D\u540D
+      table-underline: true
+    #\u662F\u5426\u63A7\u5236\u53F0 print mybatis-plus \u7684 LOGO
+    banner: true
+  configuration:
+    #\u9ED8\u8BA4\u679A\u4E3E\u5904\u7406\u7C7B,\u5982\u679C\u914D\u7F6E\u4E86\u8BE5\u5C5E\u6027,\u679A\u4E3E\u5C06\u7EDF\u4E00\u4F7F\u7528\u6307\u5B9A\u5904\u7406\u5668\u8FDB\u884C\u5904\u7406
+    #org.apache.ibatis.type.EnumTypeHandler: \u5B58\u50A8\u679A\u4E3E\u7684\u540D\u79F0
+    #org.apache.ibatis.type.EnumOrdinalTypeHandler: \u5B58\u50A8\u679A\u4E3E\u7684\u7D22\u5F15
+    #com.baomidou.mybatisplus.extension.handlers.EnumTypeHandler: \u679A\u4E3E\u7C7B\u9700\u8981\u5B9E\u73B0IEnum\u63A5\u53E3\u6216\u5B57\u6BB5\u6807\u8BB0@EnumValue\u6CE8\u89E3.
+    default-enum-type-handler: com.baomidou.mybatisplus.extension.handlers.EnumTypeHandler
+    #\u662F\u5426\u5F00\u542F\u81EA\u52A8\u9A7C\u5CF0\u547D\u540D\u89C4\u5219\u6620\u5C04\uFF0C\u5373\u4ECE\u7ECF\u5178\u6570\u636E\u5E93\u5217\u540DA_COLUMN\uFF08\u4E0B\u5212\u7EBF\u547D\u540D\uFF09\u5230\u7ECF\u5178Java\u5C5E\u6027\u540DaColumn\uFF08\u9A7C\u5CF0\u547D\u540D\uFF09\u7684\u7C7B\u4F3C\u6620\u5C04\u3002
+    #\u9ED8\u8BA4true
+    map-underscore-to-camel-case: true
+    #\u5168\u5C40\u5730\u5F00\u542F\u6216\u5173\u95ED\u914D\u7F6E\u6587\u4EF6\u4E2D\u7684\u6240\u6709\u6620\u5C04\u5668\u5DF2\u7ECF\u914D\u7F6E\u7684\u4EFB\u4F55\u7F13\u5B58\uFF0C\u9ED8\u8BA4\u4E3A true\u3002
+    cache-enabled: false
